tootltip issue fix

--- a/angular/tpl/blocks/modals/broadcastModal.html
+++ b/angular/tpl/blocks/modals/broadcastModal.html
@@ -73,7 +73,7 @@
                      <button type="button" class="btn silver-btn ml-20" ng-click="uploadvideo();" ng-disabled="!broadcastData.category || (broadcastData.images.length == 6 && editkey == null)">Add</button>
                   </div>
                   <div class="thumb-wrapper mt-30">
-                     <div class="thumbs" ng-repeat="(key,data) in broadcastData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="broadcastData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)" tooltip-class="preview-tooltip">
+                     <div class="thumbs" ng-repeat="(key,data) in broadcastData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="broadcastData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)" tooltip-class="tooltip">
                         <div class="thumb" ng-class="{'active' : key == broadcastData.thumbimage}" ngf-background="data.file" ng-if="data.filetype == 1 && data.isfile"></div>
                         <div class="thumb" ng-if="data.filetype == 1 && !data.isfile" ng-class="{'active' : key == broadcastData.thumbimage}" background-image="{{IMGURL}}{{data.file}}"></div>
                         <div class="thumb" ng-class="{'active' : key == broadcastData.thumbimage}" background-image="{{data.thumbnail}}" ng-if="data.filetype == 2"></div>
