--- a/angular/tpl/blocks/modals/collaborateresponseModal.html
+++ b/angular/tpl/blocks/modals/collaborateresponseModal.html
@@ -27,7 +27,7 @@
             <div class="col-lg-4 col-md-4 br-1">
                <div class="modal-left">
                   <div class="notes" ng-if="!notificationprojectData.member.status">
-                     <div class="custom-tooltip tooltip-right" ng-if="checkError">
+                     <div class="custom-tooltip tooltip-right tooltip-bottom" ng-if="checkError">
                         <div class="custom-tooltip-inner">
                            You Need to agree TSA Protection rules!
                         </div>
