--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-4 col-md-4 br-1">
                     <div class="modal-left">
                         <div class="notes">
-                            <div class="custom-tooltip tooltip-right" ng-if="checkError">
+                            <div class="custom-tooltip tooltip-right tooltip-bottom" ng-if="checkError">
                                 <div class="custom-tooltip-inner">
                                     You Need to agree TSA Protection rules!
                                 </div>
@@ -102,7 +102,7 @@
                         </div>
 
                         <div class="thumb-wrapper mt-30">
-                            <div class="thumbs" ng-repeat="(key,data) in formData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="formData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)" tooltip-class="preview-tooltip">
+                            <div class="thumbs" ng-repeat="(key,data) in formData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="formData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)" tooltip-class="tooltip">
                                 <div class="thumb" ng-class="{'active' : key == formData.thumbimage}" ngf-background="data.file" ng-if="data.filetype == 1 && data.isfile"></div>
                                 <div class="thumb" ng-if="data.filetype == 1 && !data.isfile" ng-class="{'active' : key == formData.thumbimage}" background-image="{{IMGURL}}{{data.file}}"></div>
                                 <div class="thumb" ng-class="{'active' : key == formData.thumbimage}" background-image="{{data.thumbnail}}" ng-if="data.filetype == 2"></div>
