--- a/angular/tpl/blocks/modals/responseModal.html
+++ b/angular/tpl/blocks/modals/responseModal.html
@@ -1,110 +1,6 @@
 <script src="js/modal-js/responsemodal.js"></script>
 <div class="custom-modal" ng-controller="ResponseModalCtrl">
-   <form class="form-horizontal" name="broadcastForm" novalidate ng-submit="addbroadCast(broadcastForm);">
-      <div class="custom-modal-title modal-orange">
-         <div class="row flex-center">
-            <div class="col-lg-4 col-md-4">
-               <h3><i class="fa fa-bolt"></i> Broadcast</h3>
-            </div>
-            <div class="col-lg-4 col-md-4 ml-15">
-               <h6 class="text-white mb-5"> Category</h6>
-               <ui-select ng-model="broadcastData.category" theme="bootstrap" ng-change="resetFeedItems()" search-enabled="false">
-                  <ui-select-match allow-clear="true" class="selected-item float-lt">
-                     <p><i class="fa fa-circle-o"></i> {{broadcastData.category ? broadcastData.category : 'Select Category'}}</p>
-                  </ui-select-match>
-                  <ui-select-choices repeat="type in servicetypes| filter: $select.search  track by $index ">
-                     <span ng-bind-html="type | highlight: $select.search"></span>
-                  </ui-select-choices>
-               </ui-select>
-               <div class="custom-tooltip tooltip-right tooltip-center" ng-show="showCatError">
-                  <div class="custom-tooltip-inner">
-                     Select Category
-                  </div>
-               </div>
-            </div>
-            <div class="col-lg-4 col-md-4"></div>
-         </div>
-      </div>
-      <!-- Modal body -->
-      <div class="custom-modal-body">
-         <div class="modal-inner-overlay" ng-if="!broadcastData.category" ng-mouseover="showTooltip();" ng-mouseleave="hideTooltip();"></div>
-         <div class="row">
-            <div class="col-lg-4 col-md-4 br-1">
-               <div class="modal-left">
-                  <div class="form-group mb-0">
-                     <label class="control-label">Add Images</label>
-                     <span class="error error-text" ng-if="imageerror">{{imageerrormsg}}</span>
-                  </div>
-                  <input name="images" type="hidden" ng-model="broadcastData.productfile" ng-required="broadcastData.images.length == 0" class="broad-images">
-                  <div class="upload-container" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid" ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-if="!viewingThumb.file">
-                     <div class="upload-inner">
-                        <div class="icon-container">
-                           <div class="img-holder"><img src="./../assets/img/upload.png" title="upload"></div>
-                           <div class="img-holder"><img src="./../assets/img/video.png" title="upload"></div>
-                           <div class="img-holder"><img src="./../assets/img/camera.png" title="upload"></div>
-                        </div>
-                        <div class="upload-content">
-                           Add images, video from the web or take photos to upload to your page
-                        </div>
-                     </div>
-                     <div class="preview-img">
-                        <div class="img-holder" ng-if="viewingThumb.filetype == 1 && viewingThumb.isfile" ngf-background="viewingThumb.file"></div>
-                        <div class="img-holder" ng-if="viewingThumb.filetype == 1 && !viewingThumb.isfile" background-image="{{IMGURL}}{{viewingThumb.file}}"></div>
-                        <anguvideo ng-model="viewingThumb.file" width="100%" height="100%" ng-if="viewingThumb.filetype == 2 && !viewingThumb.file.includes('soundcloud')">
-                        </anguvideo>
-                        <sound-cloud-player url="{{viewingThumb.file}}" width="100%" height="100%" ng-if="viewingThumb.filetype == 2 && viewingThumb.file.includes('soundcloud')">
-                        </sound-cloud-player>
-                     </div>
-                  </div>
-                  <div class="upload-container upload-wrapper" ng-if="viewingThumb.file && viewingThumb.isfile  && viewingThumb.filetype == 1" ngf-background="viewingThumb.file"></div>
-                  <div class="upload-container upload-wrapper" ng-if="viewingThumb.file && !viewingThumb.isfile  && viewingThumb.filetype == 1" background-image="{{IMGURL}}{{viewingThumb.file}}"></div>
-                  <div class="upload-container upload-wrapper" ng-if="viewingThumb.filetype == 2">
-                     <anguvideo ng-model="viewingThumb.file" width="100%" height="100%" ng-if="viewingThumb.filetype == 2 && !viewingThumb.file.includes('soundcloud')">
-                     </anguvideo>
-                     <sound-cloud-player url="{{viewingThumb.file}}" width="100%" height="100%" ng-if="viewingThumb.filetype == 2 && viewingThumb.file.includes('soundcloud')">
-                     </sound-cloud-player>
-                  </div>
-                  <div class="upload-info"><i class="fa fa-info-circle"></i> Up to 6 representative Image and video</div>
-                  <div class="form-group mt-30 mb-0">
-                     <label class="control-label">Embeded Media</label>
-                  </div>
-                  <div class="form-group flex-center-space mb-0">
-                     <input type="text" class="form-control" placeholder="Embed video URL" name="videourl" ng-model="broadcastData.embedvideo" placeholder="Youtube / Vimeo / Soundcloud" ng-required="broadcastData.embedvideo" ng-pattern="/^(http[s]?:\/\/){0,1}(www\.){0,1}[a-zA-Z0-9\.\-]+\.[a-zA-Z]{2,5}[\.]{0,1}/" ng-disabled="!broadcastData.category || (broadcastData.images.length == 6 && editkey == null)">
-                     <button type="button" class="btn silver-btn ml-20" ng-click="uploadvideo();" ng-disabled="!broadcastData.category || (broadcastData.images.length == 6 && editkey == null)">Add</button>
-                  </div>
-                  <div class="thumb-wrapper mt-30">
-                     <div class="thumbs" ng-repeat="(key,data) in broadcastData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="broadcastData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)" tooltip-class="tooltip">
-                        <div class="thumb" ng-class="{'active' : key == broadcastData.thumbimage}" ngf-background="data.file" ng-if="data.filetype == 1 && data.isfile"></div>
-                        <div class="thumb" ng-if="data.filetype == 1 && !data.isfile" ng-class="{'active' : key == broadcastData.thumbimage}" background-image="{{IMGURL}}{{data.file}}"></div>
-                        <div class="thumb" ng-class="{'active' : key == broadcastData.thumbimage}" background-image="{{data.thumbnail}}" ng-if="data.filetype == 2"></div>
-                     </div>
-                     <div class="thumbs" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid" ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-if="broadcastData.images.length < 6">
-                        <div class="add-thumb">+</div>
-                     </div>
-                  </div>
-                  <div class="upload-info mt-0"><i class="fa fa-info-circle"></i> Up to 6 representative Image and video</div>
-               </div>
-            </div>
-            <div class="col-lg-8 col-md-8">
-               <div class="modal-right">
-                  <div class="form-group mb-0">
-                     <label class="control-label">Title</label>
-                     <input type="text" class="form-control broad-title" name="title" placeholder="e.g. Title of the feed that you want to send to your friends" ng-model="broadcastData.title" required maxlength="100">
-                     <span class="error error-text" ng-if="broadcasttitleerror">Enter Feed Title</span>
-                  </div>
-                  <div class="form-group mt-30 mb-0">
-                     <label class="control-label">Description</label>
-                     <textarea class="form-control broad-description" rows="10" name="description" placeholder="This is where you can put a description of your feed." ng-model="broadcastData.description" required maxlength="1000"></textarea>
-                     <span class="error error-text" ng-if="broadcastdescriptionerror">Enter Feed Description</span>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- Modal footer -->
-      <div class="custom-modal-footer text-right mb-10">
-         <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
-         <button type="submit" class="btn success-btn ml-30" ng-disabled="!broadcastData.category">Publish Item</button>
-      </div>
-   </form>
+   <!-- <div ng-include="'tpl/blocks/modals/Contents/productReject.html'" ng-if="ResponseData.isreject"></div> -->
+   <div ng-include="'tpl/blocks/modals/Contents/productSuccess.html'" ng-if="ResponseData.status == 1"></div>
+   <div ng-include="'tpl/blocks/modals/Contents/productReject.html'" ng-if="ResponseData.status == 2"></div>
 </div>
