Response Modal form changes done

--- a/angular/tpl/blocks/modals/Contents/productReject.html
+++ b/angular/tpl/blocks/modals/Contents/productReject.html
@@ -180,5 +180,5 @@
 <!-- Modal footer -->
 <div class="custom-modal-footer text-right bt-1 pt-30">
    <button type="button" class="btn danger-btn" ng-click="closeModal()">Close</button>
-   <button type="button" class="btn silver-btn ml-30" ng-click="gotoChat(ResponseData.id)">View Details</button>
+   <button type="button" class="btn btn-svg secondary-btn-border ml-30" ng-click="gotoChat(ResponseData.id)">View Details</button>
 </div>
