--- a/angular/tpl/blocks/modals/Contents/rejectOffer.html
+++ b/angular/tpl/blocks/modals/Contents/rejectOffer.html
@@ -1,185 +1,53 @@
 <div class="custom-modal-title modal-danger">
-   <div class="row flex-center">
-      <div class="col-lg-12 col-md-12">
-         <h3>Reject Offer!</h3>
-      </div>
-   </div>
+    <div class="row flex-center">
+        <div class="col-lg-12 col-md-12">
+            <h3>Reject Offer!</h3>
+        </div>
+    </div>
 </div>
 <!-- Modal body -->
 <div class="custom-modal-body">
-   <div class="row mb-30">
-      <div class="col-lg-12 col-md-12">
-         <div class="modal-second-title">
-            <div ng-if="user.id == ResponseData.owner.id">
-               <div ng-if="user.id == ResponseData.commisionitem.userid">You rejected <span>{{ResponseData.buyer.username}}'s </span> {{ (ResponseData.commisionitem.productdetails.type == 'Service' ? 'offer ' : ResponseData.commisionitem.productdetails.type == 'Shop' ? 'purchase ' : ResponseData.commisionitem.productdetails.type == 'Event' ? 'registration ' :ResponseData.commisionitem.productdetails.type == 'Rental' ? 'booking ' : ResponseData.commisionitem.productdetails.type) }} due to <span>{{ResponseData.reason}}</span></div>
-            </div>
-            <div ng-if="user.id == ResponseData.buyer.id">
-               <div ng-if="user.id != ResponseData.commisionitem.userid"><span ng-if="ResponseData.ownercommisionstatus == 2">{{ResponseData.owner.username}}</span> rejected your {{ (ResponseData.commisionitem.productdetails.type == 'Service' ? 'offer ' : ResponseData.commisionitem.productdetails.type == 'Shop' ? 'purchase ' : ResponseData.commisionitem.productdetails.type == 'Event' ? 'registration ' :ResponseData.commisionitem.productdetails.type == 'Rental' ? 'booking ' : ResponseData.commisionitem.productdetails.type) }} due to <span>{{ResponseData.reason}}</span></div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <div class="row">
-      <div class="col-lg-4 col-md-4 br-1">
-         <div class="modal-left">
-            <div class="slider-wrapper">
-               <div class="custom-slider mob-slider">
-                  <slick data="popupcarouselItems" infinite="false" init-onload="false" settings="popupslick" class="slider-for">
-                     <div class="width100 sliderframer" ng-repeat="(key,image) in popupcarouselItems">
-                        <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
-                           <span ng-if="image.filetype == 2">
-                              <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')" id="{{image.file.includes('youtu') ? 'youtube' : 'vimeo'}}{{key}}"></anguvideo>
-                              <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')" id="soundcloud{{key}}"></sound-cloud-player>
-                           </span>
+    <div class="row">
+        <div class="col-lg-4 col-md-4 br-1">
+            <div class="modal-left">
+                <p class="secondary">You have rejected the job offer from the {{user.id == ResponseData.buyerid ? 'Seller' : 'Buyer'}}. Please indicate the reason for your decision. Thank you. </p>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12">
+                        <h3>Reason For Rejection</h3>
+                        <span class="text-danger" ng-if="productData.status == 2 && !ResponseData.reason">* Select reason</span>
+                        <div class="form-group mt-20">
+                            <input class="magic-radio" type="radio" name="reason" id="magic-radio1" ng-model="ResponseData.reason" value="Unable to meet Buyer request" />
+                            <label class="text" for="magic-radio1">Unable to meet Buyer Request</label>
                         </div>
-                     </div>
-                  </slick>
-                  <div class="thumbslider">
-                     <slick data="popupcarouselItems" init-onload="true" settings="popupthumbslick" class="slider-nav">
-                        <div class="thumbholder" ng-repeat="(key,image) in popupcarouselItems">
-                           <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+                        <div class="form-group">
+                            <input class="magic-radio" type="radio" name="reason" id="magic-radio2" ng-model="ResponseData.reason" value="Overwhelmed with Projects" />
+                            <label class="text" for="magic-radio2">Overwhelmed with Projects</label>
                         </div>
-                     </slick>
-                  </div>
-               </div>
+                        <div class="form-group">
+                            <input class="magic-radio" type="radio" name="reason" id="magic-radio3" ng-model="ResponseData.reason" value="Going on vacation" />
+                            <label class="text" for="magic-radio3">Going on Vacation</label>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-      </div>
-      <div class="col-lg-8 col-md-8">
-         <div class="modal-right">
-            <div class="row mb-30">
-               <div class="col-lg-12 col-md-12">
-                  <h4>{{ResponseData.commisionitem.productdetails.title}}</h4>
-                  <p class="secondary mt-30">{{ResponseData.commisionitem.productdetails.description}}</p>
-               </div>
+        </div>
+        <div class="col-lg-8 col-md-8">
+            <div class="modal-right">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12">
+                        <div class="form-group">
+                            <label class="control-label">Other comments (optional)</label>
+                            <textarea class="form-control" name="comments" rows="9" placeholder="Description" ng-model="ResponseData.comments"></textarea>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="row" ng-if="ResponseData.commisionitem.productdetails.type == 'Service'">
-               <div class="col-lg-4 col-md-4" ng-if="ResponseData.commisionitem.productdetails.location">
-                  <div class="form-group">
-                     <label class="control-label">Location</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-map-marker mr-10"></i> {{ResponseData.commisionitem.productdetails.location}}
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-4" ng-if="ResponseData.commisionitem.productdetails.profession && !ResponseData.commisionitem.productdetails.is_request">
-                  <div class="form-group">
-                     <label class="control-label">Skill</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-th mr-10"></i> {{ResponseData.commisionitem.productdetails.profession}}
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-4" ng-if="ResponseData.commisionitem.productdetails.is_request">
-                  <div class="form-group">
-                     <label class="control-label">Deadline</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-map-marker mr-10"></i> {{ResponseData.commisionitem.productdetails.deadline | date:"dd-MM-yyyy"}}
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-4" ng-if="ResponseData.commisionitem.productdetails.is_request">
-                  <div class="form-group">
-                     <label class="control-label">Category</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-th mr-10"></i> {{ResponseData.commisionitem.productdetails.request_category}}
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="row" ng-if="ResponseData.commisionitem.productdetails.type == 'Shop'">
-               <div class="col-lg-5 col-md-5">
-                  <div class="form-group">
-                     <label class="control-label">Category</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-th-large mr-10"></i> {{ResponseData.commisionitem.productdetails.productcategory.categoryname}}
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="row" ng-if="ResponseData.commisionitem.productdetails.type == 'Event'">
-               <div class="col-lg-3 col-md-3" ng-if="ResponseData.commisionitem.productdetails.startdate">
-                  <div class="form-group">
-                     <label class="control-label">Start Date</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-calendar mr-10" ng-if="!ResponseData.commisionitem.productdetails.alldayevent"></i> {{ResponseData.commisionitem.productdetails.alldayevent ? 'Every Day': (ResponseData.commisionitem.productdetails.startdate | date:"dd-MM-yyyy")}}
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-3 col-md-3" ng-if="ResponseData.commisionitem.productdetails.enddate">
-                  <div class="form-group">
-                     <label class="control-label">End Date</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-calendar mr-10" ng-if="!ResponseData.commisionitem.productdetails.alldayevent"></i> {{ResponseData.commisionitem.productdetails.alldayevent ? 'Every Day': (ResponseData.commisionitem.productdetails.enddate | date:"dd-MM-yyyy")}}
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-3 col-md-3">
-                  <div class="form-group">
-                     <label class="control-label">Start Time</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-clock-o mr-10"></i> {{ResponseData.commisionitem.productdetails.starttime}}
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-3 col-md-3">
-                  <div class="form-group">
-                     <label class="control-label">End Time</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-clock-o mr-10"></i> {{ResponseData.commisionitem.productdetails.endtime}}
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="row" ng-if="ResponseData.commisionitem.productdetails.type == 'Rental'">
-               <div class="col-lg-3 col-md-3" ng-if="ResponseData.commisionitem.productdetails.startdate">
-                  <div class="form-group">
-                     <label class="control-label">Start Date</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-calendar mr-10" ng-if="!ResponseData.commisionitem.productdetails.alldayevent"></i> {{ResponseData.commisionitem.productdetails.startdate | date:"dd-MM-yyyy"}}
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-3 col-md-3" ng-if="ResponseData.commisionitem.productdetails.enddate">
-                  <div class="form-group">
-                     <label class="control-label">End Date</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-calendar mr-10" ng-if="!ResponseData.commisionitem.productdetails.alldayevent"></i> {{ResponseData.commisionitem.productdetails.enddate | date:"dd-MM-yyyy"}}
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-3 col-md-3">
-                  <div class="form-group">
-                     <label class="control-label">Location</label>
-                     <div class="btn block-btn gray-btn">
-                        <i class="fa fa-map-marker mr-10"></i> {{ResponseData.commisionitem.productdetails.location}}
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="row mt-30">
-               <div class="col-lg-12 col-md-12">
-
-                  <div class="price-group">
-                     <span class="price">
-                     {{ResponseData.commisionitem.productdetails.price ? (ResponseData.commisionitem.productdetails.price | currency): 'Free'}}
-                     </span>
-                     <span class="price-sub" ng-if="ResponseData.commisionitem.productdetails.price > 0 && ResponseData.commisionitem.productdetails.type!='Shop'">  Per {{ResponseData.commisionitem.productdetails.periodtype}} </span>
-                  </div>
-               </div>
-            </div>
-            <div class="row mt-30" ng-if="ResponseData.status == 2 && ResponseData.comments">
-               <div class="col-lg-12 col-md-12">
-                  <p class="secondary mt-30">{{ResponseData.comments}}</p>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
+        </div>
+    </div>
 </div>
 <!-- Modal footer -->
 <div class="custom-modal-footer text-right bt-1 pt-30">
-   <button class="btn danger-btn" ng-click="cancelRequest()">Cancel </button>
-   <button class="btn success-btn ml-30" ng-click="cancelRequest()">Proceed </button>
-   <button type="button" class="btn silver-btn ml-30" ng-click="gotoChat(ResponseData.id)">View Details</button>
+    <button type="button" class="btn danger-btn" ng-click="cancelRequest()">Cancel </button>
+    <button type="button" class="btn success-btn ml-30" ng-disabled="!ResponseData.reason" ng-click="rejectOffer();">Proceed </button>
+    <button type="button" class="btn btn-svg secondary-btn-border ml-30" ng-click="gotoChat(ResponseData.id)">View Details</button>
 </div>
