--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -27,6 +27,8 @@
                         </ui-select-choices>
                     </ui-select>
 
+                    <h3><i class="fa fa-minus-square-o pull-right" ng-click="closeModal()"></i></h3>
+
                     <div class="custom-tooltip tooltip-left" ng-show="showCatError">
                         <div class="custom-tooltip-inner">
                             Select Category
