--- a/angular/index.html
+++ b/angular/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Collabro</title>
-    <base href="/collabro-v1/collabro-website/angular/" />
+    <base href="/project/Collabro/angular/" />
+    <!-- <base href="/collabro-v1/collabro-website/angular/" /> -->
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -50,7 +51,7 @@
     <div class="app" ui-view></div>
     <!-- Skitter Slider -->
     <!-- // Main Css Files -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- Angular -->
