--- a/angular/tpl/blocks/modals/Contents/productSuccess.html
+++ b/angular/tpl/blocks/modals/Contents/productSuccess.html
@@ -1,7 +1,10 @@
 <div class="custom-modal-title modal-primary">
    <div class="row flex-center">
-      <div class="col-lg-12 col-md-12">
+      <div class="col-lg-6 col-md-6">
          <h3>Congratulations!</h3>
+      </div>
+      <div class="col-lg-6 col-md-6">
+         <h3><i class="fa fa-minus-square-o pull-right" ng-click="closeModal()"></i></h3>
       </div>
    </div>
 </div>
