--- a/angular/tpl/blocks/modals/Contents/rejectOffer.html
+++ b/angular/tpl/blocks/modals/Contents/rejectOffer.html
@@ -1,8 +1,11 @@
 <div class="custom-modal-title modal-danger">
     <div class="row flex-center">
-        <div class="col-lg-12 col-md-12">
+        <div class="col-lg-6 col-md-6">
             <h3>Reject Offer!</h3>
         </div>
+        <div class="col-lg-6 col-md-6">
+         <h3><i class="fa fa-minus-square-o pull-right" ng-click="closeModal()"></i></h3>
+      </div>
     </div>
 </div>
 <!-- Modal body -->
