--- a/angular/tpl/blocks/modals/Contents/responseInfo.html
+++ b/angular/tpl/blocks/modals/Contents/responseInfo.html
@@ -1,6 +1,6 @@
 <div class="custom-modal-title modal-primary" ng-class="{'modal-warning': ResponseData.commisionitem.has_bargained }">
    <div class="row flex-center" ng-if="(user.id == ResponseData.owner.id)">
-      <div class="col-lg-12 col-md-12" ng-if="(user.id != ResponseData.commisionitem.userid)">
+      <div class="col-lg-6 col-md-6" ng-if="(user.id != ResponseData.commisionitem.userid)">
          <h3 ng-if="!ResponseData.commisionitem.has_bargained">{{ (ResponseData.commisionitem.productdetails.type == 'Service' ? 'You have been commissioned!' : ResponseData.commisionitem.productdetails.type == 'Shop' ? 'Order received' : ResponseData.commisionitem.productdetails.type == 'Event' ? 'Someone
             has registered for your event' :ResponseData.commisionitem.productdetails.type == 'Rental' ? 'Someone has made a booking' : ResponseData.commisionitem.productdetails.type) }}
          </h3>
@@ -8,12 +8,15 @@
             == 'Event' ? 'Some one likes to negotiate to register your event' :ResponseData.commisionitem.productdetails.type == 'Rental' ? 'Some one likes to negotiate to made a booking' : ResponseData.commisionitem.productdetails.type) }}
          </h3>
       </div>
-      <div class="col-lg-12 col-md-12" ng-if="(user.id == ResponseData.commisionitem.userid)">
+      <div class="col-lg-6 col-md-6" ng-if="(user.id == ResponseData.commisionitem.userid)">
          <h3>{{ ResponseData.commisionitem.mytotalcounters == 1 ? 'Your respond has been sent successfully' : 'Request has been amended' }}</h3>
+      </div>
+      <div class="col-lg-6 col-md-6">
+         <h3><i class="fa fa-minus-square-o pull-right" ng-click="closeModal()"></i></h3>
       </div>
    </div>
    <div class="row flex-center" ng-if="(user.id == ResponseData.buyer.id)">
-      <div class="col-lg-12 col-md-12" ng-if="(user.id != ResponseData.commisionitem.userid)">
+      <div class="col-lg-6 col-md-6" ng-if="(user.id != ResponseData.commisionitem.userid)">
          <h3 ng-if="!ResponseData.commisionitem.has_bargained">{{ (ResponseData.commisionitem.productdetails.type == 'Service' ? 'Your request for service have been sent. Awaiting confirmation ' : ResponseData.commisionitem.productdetails.type == 'Shop' ? 'Your order have been sent. Awaiting confirmation'
             : ResponseData.commisionitem.productdetails.type == 'Event' ? 'You have registered for an event. Awaiting confirmation' :ResponseData.commisionitem.productdetails.type == 'Rental' ? 'You have made booking. Awaiting confirmation' : ResponseData.commisionitem.productdetails.type)
             }}
@@ -22,12 +25,15 @@
             == 'Event' ? 'Your negotiation request has been sent' :ResponseData.commisionitem.productdetails.type == 'Rental' ? 'Your negotiation request has been sent' : ResponseData.commisionitem.productdetails.type) }}
          </h3>
       </div>
-      <div class="col-lg-12 col-md-12" ng-if="(user.id == ResponseData.commisionitem.userid)">
+      <div class="col-lg-6 col-md-6" ng-if="(user.id == ResponseData.commisionitem.userid)">
          <h3 ng-if="!ResponseData.commisionitem.has_bargained">{{ (ResponseData.commisionitem.productdetails.type == 'Service' ? 'Your request for service have been sent. Awaiting confirmation' : ResponseData.commisionitem.productdetails.type == 'Shop' ? 'Your order have been sent. Awaiting confirmation'
             : ResponseData.commisionitem.productdetails.type == 'Event' ? 'You have registered for an event. Awaiting confirmation' :ResponseData.commisionitem.productdetails.type == 'Rental' ? 'You have made booking. Awaiting confirmation' : ResponseData.commisionitem.productdetails.type)
             }}
          </h3>
          <h3 ng-if="ResponseData.commisionitem.has_bargained">{{ ResponseData.commisionitem.mytotalcounters == 1 ? 'Your negotiation request has been sent' : 'Your amended request has been sent' }}</h3>
+      </div>
+      <div class="col-lg-6 col-md-6">
+         <h3><i class="fa fa-minus-square-o pull-right" ng-click="closeModal()"></i></h3>
       </div>
    </div>
 </div>
@@ -461,7 +467,7 @@
       <button type="button" class="btn danger-btn" ng-click="closeModal()" ng-if="(!ResponseData.iscounter && !ResponseData.isreject && !ResponseData.isacceptoffer  && !ResponseData.iscounter)">Close</button>
       <button class="btn danger-btn" ng-click="cancelRequest()" ng-if="ResponseData.status == 0 && (ResponseData.iscounter || ResponseData.isreject || ResponseData.isacceptoffer)">Cancel </button>
       <button type="button" class="btn success-btn ml-30" ng-click="proceedRequest()" ng-disabled="!ResponseData.iscounter && !ResponseData.isreject && !ResponseData.isacceptoffer" ng-if="ResponseData.status == 0 && (ResponseData.iscounter || ResponseData.isreject || ResponseData.isacceptoffer)">Proceed</button>
-      <span class="action-btn ml-30" ng-if="!ResponseData.status && !ResponseData.isreplied && !ResponseData.isreject && !ResponseData.isacceptoffer && !ResponseData.iscounter" ng-mouseover="showcheckTooltip();" ng-mouseleave="hidecheckTooltip();">
+      <span class="action-btn ml-30" ng-if="!ResponseData.status && !ResponseData.isreplied && !ResponseData.isreject && !ResponseData.isacceptoffer && !ResponseData.iscounter && (user.id != ResponseData.commisionitem.userid)" ng-mouseover="showcheckTooltip();" ng-mouseleave="hidecheckTooltip();">
          <button type="button" class="btn silver-btn block-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <i class="fa fa-angle-down"></i></button>
          <ul class="dropdown-menu" ng-if="!ResponseData.status && !ResponseData.isreplied && !ResponseData.isreject && !ResponseData.isacceptoffer">
             <li  ng-if="!ResponseData.isreject && !ResponseData.commisionitem.productdetails.hasbargain&&!ResponseData.iscounter"><button type="button" class="btn default-btn block-btn" ng-click="counterOffer()" ng-disabled="!ResponseData.agreeterms">Counter Offer</button></li>
