--- a/angular/tpl/blocks/modals/collaborateresponseModal.html
+++ b/angular/tpl/blocks/modals/collaborateresponseModal.html
@@ -13,7 +13,9 @@
                   <span>{{notificationprojectData.type}}</span>
                </div>
             </div>
-            <div class="col-lg-4 col-md-4"></div>
+            <div class="col-lg-4 col-md-4">
+               <h3><i class="fa fa-minus-square-o pull-right" ng-click="closeModal()"></i></h3>
+            </div>
          </div>
       </div>
       <!-- Modal body -->
