--- a/angular/tpl/blocks/modals/productModal.html
+++ b/angular/tpl/blocks/modals/productModal.html
@@ -25,6 +25,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-4">
+               <h3><i class="fa fa-minus-square-o pull-right" ng-click="closeModal()"></i></h3>
             </div>
          </div>
       </div>
