--- a/angular/tpl/blocks/modals/todoModal.html
+++ b/angular/tpl/blocks/modals/todoModal.html
@@ -24,7 +24,9 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-4 col-md-4"></div>
+            <div class="col-lg-4 col-md-4">
+               <h3><i class="fa fa-minus-square-o pull-right" ng-click="closeModal()"></i></h3>
+            </div>
          </div>
       </div>
       <!-- Modal body -->
